Cropped "logo-nero" and "Stop&code-Grid" images

--- a/3-icon-RL-gridFlex/scss/style.scss
+++ b/3-icon-RL-gridFlex/scss/style.scss
@@ -29,32 +29,41 @@ header {
     }
 }
 
-nav ul {
-    width: 100%;
-    list-style-type: none;
-    display: flex;
+nav {
     margin: 10px 0;
-    padding: 0;
-    align-items: center;
-    gap: 0.5%;
-    li {
-        width: 16.666667%;
-        text-align: center;
-        a {
-            display: block;
-            text-decoration: none;
-            background-color: #ffac1c; // Bright Orange color
-            color: #ffffff;
-            padding: 10px 0;
-            transition: background-color 0.3s ease;
-        }
+    ul {
+        width: 100%;
+        list-style-type: none;
+        display: flex;
+        margin: 0;
+        padding: 0;
+        align-items: center;
+        gap: 0.5%;
+        li {
+            width: 16.666667%;
+            text-align: center;
+            a {
+                display: block;
+                text-decoration: none;
+                background-color: #ffac1c; // Bright Orange color
+                color: #ffffff;
+                padding: 10px 0;
+                transition: background-color 0.3s ease;
+            }
 
-        a:hover {
-            background-color: #ffbf00; // Amber color
+            a:hover {
+                background-color: #ffbf00; // Amber color
+            }
         }
     }
 }
 
 #hero-banner {
-    width: 100%;
+    overflow: hidden;
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+    }
 }
